description = "Sends web-notifications to registered clients"

apply plugin: 'groovy'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

version = '0.0.1'

sourceCompatibility = 11
targetCompatibility = 11

test {
    jvmArgs '--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED' //TODO Once possible - Remove
}

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.12'
    compileOnly 'org.projectlombok:lombok:1.18.12'

    compile 'org.springframework.boot:spring-boot-starter:2.1.1.RELEASE'
    compile 'org.springframework.kafka:spring-kafka:2.2.2.RELEASE'
    compile 'io.vertx:vertx-core:3.6.2'
    compile 'com.google.guava:guava:29.0-jre'

    testCompile project(':test-utils')
    testCompile 'org.springframework.boot:spring-boot-starter-test:2.1.1.RELEASE'
    testCompile 'org.spockframework:spock-spring:1.3-groovy-2.5'
    testCompile 'org.springframework.kafka:spring-kafka-test:2.2.2.RELEASE'
    testCompile 'log4j:log4j:1.2.17'
}
